tests/samples/negative/generics/qualified_plain_function_type_args.ax
module qualified_plain_function_type_args;

import samplelib.visibility as vis;

fn main() -> i32 {
    return vis::exported<i32>(1);
}
